force-app/main/default/Objects/IRS_Nonprofit__c/IRS_Nonprofit__c.object-meta.xml
<CustomObject>
    <label>IRS Nonprofit</label>
    <nameField>
        <displayFormat>NP{0000}</displayFormat>
        <label>IRS Nonprofit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRS Nonprofits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>