force-app/main/default/Objects/IRS_Nonprofit__c/fields/Acct_PD__c.field-meta.xml
<CustomField>
    <fullName>Acct_PD__c</fullName>
    <label>Acct PD</label>
    <length>12</length>
    <type>Text</type>
</CustomField>