force-app/main/default/Objects/IRS_Nonprofit__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>9</length>
    <type>Text</type>
</CustomField>