force-app/main/default/Objects/IRS_Nonprofit__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>