force-app/main/default/Objects/IRS_Nonprofit__c/fields/Asset_Amt__c.field-meta.xml
<CustomField>
    <fullName>Asset_Amt__c</fullName>
    <label>Asset Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>