force-app/main/default/Objects/IRS_Nonprofit__c/fields/Asset_CD__c.field-meta.xml
<CustomField>
    <fullName>Asset_CD__c</fullName>
    <label>Asset CD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>