force-app/main/default/Objects/IRS_Nonprofit__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>4</length>
    <type>Text</type>
</CustomField>