force-app/main/default/Objects/IRS_Nonprofit__c/fields/Deductibility__c.field-meta.xml
<CustomField>
    <fullName>Deductibility__c</fullName>
    <label>Deductibility</label>
    <length>1</length>
    <type>Text</type>
</CustomField>