force-app/main/default/Objects/IRS_Nonprofit__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>