force-app/main/default/Objects/IRS_Nonprofit__c/fields/Filing_Req_CD__c.field-meta.xml
<CustomField>
    <fullName>Filing_Req_CD__c</fullName>
    <label>Filing Req CD</label>
    <length>2</length>
    <type>Text</type>
</CustomField>