force-app/main/default/Objects/IRS_Nonprofit__c/fields/Foundation__c.field-meta.xml
<CustomField>
    <fullName>Foundation__c</fullName>
    <label>Foundation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>