force-app/main/default/Objects/IRS_Nonprofit__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>