force-app/main/default/Objects/IRS_Nonprofit__c/fields/ICO__c.field-meta.xml
<CustomField>
    <fullName>ICO__c</fullName>
    <label>ICO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>