force-app/main/default/Objects/IRS_Nonprofit__c/fields/Income_Amt__c.field-meta.xml
<CustomField>
    <fullName>Income_Amt__c</fullName>
    <label>Income Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>