force-app/main/default/Objects/IRS_Nonprofit__c/fields/Income_CD__c.field-meta.xml
<CustomField>
    <fullName>Income_CD__c</fullName>
    <label>Income CD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>