force-app/main/default/Objects/IRS_Nonprofit__c/fields/Nonprofit_Name__c.field-meta.xml
<CustomField>
    <fullName>Nonprofit_Name__c</fullName>
    <label>Nonprofit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>