force-app/main/default/Objects/IRS_Nonprofit__c/fields/NTEE_Cd__c.field-meta.xml
<CustomField>
    <fullName>NTEE_Cd__c</fullName>
    <label>NTEE Cd</label>
    <length>4</length>
    <type>Text</type>
</CustomField>