force-app/main/default/Objects/IRS_Nonprofit__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <length>1</length>
    <type>Text</type>
</CustomField>