force-app/main/default/Objects/IRS_Nonprofit__c/fields/PF_Filing_Req_CD__c.field-meta.xml
<CustomField>
    <fullName>PF_Filing_Req_CD__c</fullName>
    <label>PF Filing Req CD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>