force-app/main/default/Objects/IRS_Nonprofit__c/fields/Revenue_Amt__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amt__c</fullName>
    <label>Revenue Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>