force-app/main/default/Objects/IRS_Nonprofit__c/fields/Ruling__c.field-meta.xml
<CustomField>
    <fullName>Ruling__c</fullName>
    <label>Ruling</label>
    <length>6</length>
    <type>Text</type>
</CustomField>