force-app/main/default/Objects/IRS_Nonprofit__c/fields/Sort_Name__c.field-meta.xml
<CustomField>
    <fullName>Sort_Name__c</fullName>
    <label>Sort Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>