force-app/main/default/Objects/IRS_Nonprofit__c/fields/Subsection__c.field-meta.xml
<CustomField>
    <fullName>Subsection__c</fullName>
    <label>Subsection</label>
    <length>2</length>
    <type>Text</type>
</CustomField>