force-app/main/default/Objects/IRS_Nonprofit__c/fields/Tax_Period__c.field-meta.xml
<CustomField>
    <fullName>Tax_Period__c</fullName>
    <label>Tax Period</label>
    <length>6</length>
    <type>Text</type>
</CustomField>